k8s/manual/deployment-v1-no-limits.yaml
# original deploy, no requests or limits. keeping it for the writeup
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  namespace: manual-managed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.7.0
          ports:
            - containerPort: 9898
              name: http
