k8s/manual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: manual-managed
  labels:
    app: podinfo          # servicemonitor selects the service by this label
spec:
  selector:
    app: podinfo
  ports:
    - name: http          # servicemonitor references this port by name
      port: 9898
      targetPort: http
  type: ClusterIP
